prd/ubby/ubby-front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubby-front
  namespace: ubby
  labels:
    app: ubby-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubby-front
  template:
    metadata:
      labels:
        app: ubby-front
        app.kubernetes.io/part-of: soludev-workload
    spec:
      tolerations:
        - key: "klipperlb-exclude"
          value: "true"
          effect: "NoSchedule"
          operator: "Equal"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/part-of: soludev-workload
      containers:
        - name: ubby-front
          image: kaiohz/pickpro:ubby-front-53500358b27c1148c47ffb6b38a582f8ed434485
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "96Mi"
              cpu: "100m"
      imagePullSecrets:
        - name: ubby-docker-secret
