prd/ubby/ubby-front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ubby-front-ingress
  namespace: ubby
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-scheme: https
spec:
  rules:
    - host: ubby.soludev.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ubby-front
                port:
                  number: 4000
